--- a/hm-api/pom.xml
+++ b/hm-api/pom.xml
@@ -35,5 +35,12 @@
             <version>1.6.6</version>
             <scope>compile</scope>
         </dependency>
+        <!-- mybatis-plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>3.5.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
