--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>user-service</module>
         <module>trade-service</module>
         <module>pay-service</module>
+        <module>hm-gateway</module>
     </modules>
 
     <parent>
@@ -34,7 +35,7 @@
         <org.projectlombok.version>1.18.20</org.projectlombok.version>
         <spring-cloud.version>2021.0.3</spring-cloud.version>
         <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
-        <mybatis-plus.version>3.4.3</mybatis-plus.version>
+        <mybatis-plus.version>3.5.3</mybatis-plus.version>
         <hutool.version>5.8.11</hutool.version>
         <mysql.version>8.0.23</mysql.version>
     </properties>
